<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/delete_all"
        app:showAsAction="always"
        android:title="@string/delete_all"
        android:icon="@drawable/ic_delete_forever_black_24dp" />

    <item
        android:id="@+id/detail"
        android:icon="@drawable/ic_more_vert_black_24dp"
        app:showAsAction="always"
        android:title="@string/detail">
        <menu>
            <item
                android:id="@+id/finance"
                android:title="@string/finance"
                app:showAsAction="never"
                android:icon="@drawable/ic_attach_money_black_24dp" />
            <item
                android:id="@+id/sample"
                android:title="@string/sample"
                app:showAsAction="never"
                android:icon="@drawable/ic_check_circle_black_24dp" />
            <item
                android:id="@+id/about"
                android:title="@string/about"
                app:showAsAction="never"
                android:icon="@drawable/ic_help_black_24dp" />
            <item
                android:id="@+id/feedback"
                android:title="@string/feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                app:showAsAction="never" />
            <item
                android:id="@+id/setting"
                android:title="@string/setting"
                android:icon="@drawable/ic_settings_black_24dp"
                app:showAsAction="never" />

        </menu>
    </item>


</menu>