<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.inventory.SubActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/s_head"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/s_image"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/no_picture_available"
            android:background="@color/color_no_important" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/s_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/d_sub_body"
        android:layout_weight="3"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_name" />

            <EditText
                android:id="@+id/s_name"
                style="@style/SubFieldStyle"
                android:hint="product name please" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_price" />

            <EditText
                android:id="@+id/s_price"
                style="@style/SubFieldStyle"
                android:inputType="numberDecimal"
                android:hint="eg 20 0.12 234.2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_quantity" />

            <LinearLayout
                style="@style/SubFieldStyle"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/minus"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="-" />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="6"
                    android:layout_height="wrap_content"
                    android:id="@+id/s_quantity"
                    android:text="0"
                    android:inputType="number"
                    android:textAppearance="?android:textAppearanceSmall" />

                <Button
                    android:id="@+id/plus"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="+" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_supply" />

            <EditText
                android:id="@+id/s_supplier"
                style="@style/SubFieldStyle"
                android:hint="supplier please" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_order_method" />

            <Spinner
                android:id="@+id/s_spinner"
                android:layout_width="0dp"
                android:layout_weight="5"
                android:layout_height="wrap_content"
                android:spinnerMode="dropdown"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/SubCatagoryStyle"
                android:text="@string/s_order_data" />

            <EditText
                android:id="@+id/s_order_data"
                style="@style/SubFieldStyle"
                android:hint="order detail please" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/s_order"
        android:text="@string/s_order"
        android:textAllCaps="true"
        android:layout_marginBottom="@dimen/d_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
